@startuml
'https://plantuml.com/class-diagram

class "Course" as CourseCatalog {}
class "Module" as ModuleCatalog {}
class "Clip" as ClipCatalog {}

ElearningPlatform *--> Catalog
Catalog *--> CourseCatalog
CourseCatalog o--> ModuleCatalog 
ModuleCatalog o--> ClipCatalog

ElearningPlatform *--> Security
Security *--> SignUp
Security *--> Login
Security *--> ResetPassword
Security *--> ConfirmMail
Security *--> ConfirmResetPassword

ElearningPlatform *--> Library
Library *--> HomeLibrary
HomeLibrary --> Course

@enduml
